--- a/src/styles/timeline/timeline.css
+++ b/src/styles/timeline/timeline.css
@@ -48,7 +48,8 @@
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
     width: 2px;
     height: 100%;
     background-color: #cfcfcf;
@@ -61,14 +62,16 @@
   .timeline ul li:nth-child(odd) {
     float: left;
     clear: right;
-    transform: translateX(-30px) !important;
+    -webkit-transform: translateX(-30px) !important;
+            transform: translateX(-30px) !important;
     border: 4px solid #EE488A;
     border-radius: 20px 0px 20px 20px;
   }
   .timeline ul li:nth-child(even) {
     float: right;
     clear: left;
-    transform: translateX(30px) !important;
+    -webkit-transform: translateX(30px) !important;
+            transform: translateX(30px) !important;
     border: 4px solid #944D9A;
     border-radius: 0px 20px 20px 20px;
   }
@@ -78,15 +81,17 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     top: 0px;
   }
   .timeline ul li:nth-child(odd)::before {
-    transform: translate(50%, -50%);
+    -webkit-transform: translate(50%, -50%);
+            transform: translate(50%, -50%);
     right: -19px;
   }
   .timeline ul li:nth-child(even)::before {
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     left: -49px;
   }
   .timeline-content .date {
@@ -99,4 +104,5 @@
   .timeline ul li:nth-child(even):hover::before {
     background-color: #EE488A;
   }
-}/*# sourceMappingURL=timeline.css.map */
+}
+/*# sourceMappingURL=timeline.css.map */
